# nearapps-contracts

./: .gitignore  Cargo.toml  README.md  build.sh  test.sh
.cargo/: config.toml
.github/workflows/: build.yml
app-counter/: API.md  Cargo.toml  README.md  build.sh  test.sh
app-counter/src/: error.rs  lib.rs  logging.rs  owners.rs  version.rs
app-counter/tests/: test_counter.rs  test_counter.sh
app-counter/tests/utils/: mod.rs
app-crypto/: API.md  Cargo.toml  README.md  build.sh  test.sh
app-crypto/src/: crypto.rs  hash.rs  lib.rs  version.rs
app-crypto/src/crypto/: ecdsa_secp256k1.rs  eddsa_ed25519.rs
app-crypto/src/crypto/ecdsa_secp256k1/: sign.rs  verify.rs
app-crypto/src/crypto/eddsa_ed25519/: sign.rs  verify.rs
app-crypto/tests/: test_ecdsa_secp256k1.rs  test_eddsa_ed25519.rs
app-crypto/tests/utils/: _secp256k1.rs  mod.rs
app-exec/: API.md  Cargo.toml  README.md  test.sh
app-exec/src/: crypto.rs  error.rs  exec.rs  hash.rs  lib.rs  owners.rs  version.rs
app-exec/src/crypto/: ecdsa_secp256k1.rs  eddsa_ed25519.rs
app-exec/src/crypto/ecdsa_secp256k1/: sign.rs  verify.rs
app-exec/src/crypto/eddsa_ed25519/: sign.rs  verify.rs
app-exec/tests/: test_ecdsa_secp256k1.rs  test_eddsa_ed25519.rs  test_exec.rs
app-exec/tests/utils/: _secp256k1.rs  mod.rs
app-nft/: .gitignore  API.md  Cargo.toml  build.sh
app-nft-series/: .gitignore  API.md  Cargo.toml  README.md  build.sh  test.sh
app-nft-series/src/: error.rs  lib.rs  migration.rs  owner.rs  owners.rs  series.rs  transfer_call.rs  utils.rs  version.rs
app-nft-series/tests/: test_nft.rs  test_nft.sh
app-nft-series/tests/neardev/: dev-account  dev-account.env
app-nft-series/tests/utils/: mod.rs
app-nft/src/: error.rs  lib.rs  mint.rs  series.rs  utils.rs
app-nft/src/std_nft/: approval.rs  mod.rs  nft_core.rs
app-nft/tests/: test_nft.rs  test_nft.sh
app-nft/tests/utils/: mod.rs
app-send-near/: API.md  Cargo.toml  README.md  build.sh  test.sh
app-send-near/src/: error.rs  lib.rs  logging.rs  owners.rs  version.rs
app-send-near/tests/: test_send_near.rs  test_send_near.sh
app-send-near/tests/utils/: mod.rs
app-send-nft/: API.md  Cargo.toml  README.md  build.sh  test.sh
app-send-nft/src/: error.rs  ext_nft.rs  lib.rs  logging.rs  nft_receiver.rs  owner.rs  owners.rs  protocol.rs  send.rs  types.rs  user.rs  version.rs
app-send-nft/tests/: test_send_nft.rs
app-send-nft/tests/utils/: mod.rs
app-user-factory/: Cargo.toml  README.md  build.rs  build.sh  test.sh
app-user-factory/src/: error.rs  lib.rs  logging.rs  owners.rs  version.rs
app-wallet/: API.md  Cargo.toml  README.md  build.sh  test.sh
app-wallet/src/: error.rs  lib.rs  logging.rs  owners.rs  version.rs
app-wallet/tests/: test_wallet.rs
app-wallet/tests/utils/: mod.rs
counter/: Cargo.toml  README.md
counter/src/: lib.rs
counter/tests/: test_counter.rs
exec/: Cargo.toml  build.sh
exec/src/: crypto.rs  exec.rs  hash.rs  lib.rs  signing.rs
exec/src/crypto/: eddsa_ed25519.rs
exec/src/crypto/ecdsa_secp256k1/: types.rs  verify.rs
exec/src/crypto/eddsa_ed25519/: sign.rs  verify.rs
exec/src/signing/: ecdsa_secp256k1.rs  eddsa_ed25519.rs
exec/src/signing/ecdsa_secp256k1/: types.rs
exec/src/signing/eddsa_ed25519/: types.rs
exec/tests/: test_ecdsa_secp256k1.rs  test_eddsa_ed25519.rs  test_exec.rs
exec/tests/utils/: _secp256k1.rs  mod.rs
lib-crypto/: Cargo.toml  README.md
lib-crypto/src/: crypto.rs  hash.rs
lib-crypto/src/crypto/: ecdsa_secp256k1.rs  eddsa_ed25519.rs
lib-crypto/src/crypto/ecdsa_secp256k1/: sign.rs  verify.rs
lib-crypto/src/crypto/eddsa_ed25519/: sign.rs  types.rs  verify.rs
lib-log/: Cargo.toml  README.md
lib-log/src/: lib.rs
lib-near-ext/: Cargo.toml  README.md
lib-near-ext/src/: error.rs  lib.rs  macros.rs  owners.rs  sim.rs  types.rs  version.rs  workspace.rs
res/: near.wasm  testnet.wasm
res/migration/: 333a6e7_nearapps_exec.wasm  924a055_nearapps_nft.wasm  test_migration_924a055.sh
res/scripts/: test_simultaneous_calls.sh
src/: exec.rs  hash.rs  lib.rs  signing.rs
src/signing/: ecdsa_secp256k1.rs  eddsa_ed25519.rs  types.rs
src/signing/ecdsa_secp256k1/: types.rs
tests/: test_sign.rs
tests/utils/: _secp256k1.rs  mod.rs
