[workspace]
resolver = "2"

# include a member for each contract
members = [
  "app-counter",
  "app-crypto",
  "app-exec",
  "app-nft",
  "app-wallet",
  "lib-crypto",
  "lib-log",
  "lib-near-ext"
]

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = true
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true
