[package]
name = "nearapps-counter"
version = "0.1.0"
authors = ["Near Inc <hello@near.org>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = {version = "4.0.0-pre.4", features = ["unstable"]}
nearapps-log = {path = "../lib-log"}

[dev-dependencies]
near-sdk-sim = "4.0.0-pre.4"
nearapps-exec = { path = "../app-exec" }
