[package]
name = "nearapps-counter"
version = "0.1.0"
authors = ["Near Inc <hello@near.org>"]
edition = "2018"
resolver = "2"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = {version = "4.0.0-pre.4", features = ["unstable"]}
near-units = "0.1.0"
nearapps-near-ext = {path = "../lib-near-ext/", default-features = false, features = []}
nearapps-log = {path = "../lib-log"}

[dev-dependencies]
near-sdk-sim = "4.0.0-pre.4"
nearapps-near-ext = {path = "../lib-near-ext/", features = ["sim"]}
nearapps-exec = { path = "../app-exec" }
