[package]
name = "nearapps-exec"
version = "0.1.0"
authors = ["Sebastian Gerske <13647606+H34D@users.noreply.github.com>", "Thiago Machado <thiago@chikai.io>"]
edition = "2018"
resolver = "2"
build = "build.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = {version = "4.0.0-pre.4", features = ["unstable"]}
near-units = "0.1.0"
nearapps-near-ext = {path = "../lib-near-ext/", default-features = false, features = []}
nearapps-log = {path = "../lib-log"}
strum = "0.23"
strum_macros = "0.23"



# to de/serialize [u8; u64] arrays
[dependencies.serde-big-array]
version = "0.3.2"
default-features = false
features = ["const-generics"]

[dev-dependencies]
near-sdk-sim = "4.0.0-pre.4"
nearapps-near-ext = {path = "../lib-near-ext/", features = ["sim"]}
nearapps-counter = { path = "../app-counter" }

[build-dependencies]
nearapps-near-ext = {path = "../lib-near-ext/", default-features = false, features = []}

# [profile.release]
# codegen-units = 1
# # Tell `rustc` to optimize for small code size.
# opt-level = "z"
# lto = true
# debug = false
# panic = "abort"
# # Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
# overflow-checks = true
