[package]
name = "nearapps-nft"
version = "0.1.0"
authors = ["Sebastian Gerske <13647606+H34D@users.noreply.github.com>"]
edition = "2018"
resolver = "2"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = {version = "4.0.0-pre.4", features = ["unstable"]}
nearapps-near-ext = {path = "../lib-near-ext/", features = []}
near-contract-standards = "4.0.0-pre.4"
sha2 = "0.9.0"
digest = "0.9.0"
strum = "0.23"
strum_macros = "0.23"

[dependencies.serde_with]
version = "1.11.0"
default-features = false
features = [ "macros" ]

[dev-dependencies]
near-sdk-sim = "4.0.0-pre.4"
nearapps-near-ext = {path = "../lib-near-ext/", features = ["sim"]}
tokio = "1.14.0"
anyhow = "1.0.0"

[dev-dependencies.workspaces]
git = "https://github.com/near/workspaces-rs"
rev = "098b2c3" 


# [profile.release]
# codegen-units = 1
# # Tell `rustc` to optimize for small code size.
# opt-level = "z"
# lto = true
# debug = false
# panic = "abort"
# # Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
# overflow-checks = true
