[package]
name = "nearapps-wallet"
version = "0.1.0"
authors = ["Near Inc <hello@near.org>"]
edition = "2018"
resolver = "2"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = {version = "4.0.0-pre.4", features = ["unstable"]}
nearapps-near-ext = {path = "../lib-near-ext/", features = []}
near-units = "0.1.0"
strum = "0.23"
strum_macros = "0.23"

[dev-dependencies]
near-sdk-sim = "4.0.0-pre.4"
nearapps-near-ext = {path = "../lib-near-ext/", features = ["sim"]}

[dev-dependencies.ed25519-dalek]
version = "1.0.1"
default-features = false
features = ["u64_backend"]

[dev-dependencies.nearapps-exec]
path = "../app-exec/"
# version = "1.0.1"
# default-features = false
# features = ["u64_backend"]

[features]
default = []
crypto = []