[package]
name = "nearapps-wallet"
version = "0.1.0"
authors = ["Thiago Machado <thiago@chikai.io>"]
edition = "2018"
resolver = "2"
build = "build.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = {version = "4.0.0-pre.4", features = ["unstable"]}
near-units = "0.1.0"
nearapps-near-ext = {path = "../lib-near-ext/", default-features = false, features = []}
nearapps-log = {path = "../lib-log"}
strum = "0.23"
strum_macros = "0.23"

[dev-dependencies]
near-sdk-sim = "4.0.0-pre.4"
nearapps-near-ext = {path = "../lib-near-ext/", features = ["sim"]}
nearapps-lib-crypto = {path = "../lib-crypto/"}

[dev-dependencies.ed25519-dalek]
version = "1.0.1"
default-features = false
features = ["u64_backend"]

[dev-dependencies.nearapps-exec]
path = "../app-exec/"
# version = "1.0.1"
# default-features = false
# features = ["u64_backend"]

[build-dependencies]
nearapps-near-ext = {path = "../lib-near-ext/", default-features = false, features = []}
