[package]
name = "nearapps-log"
version = "0.1.0"
authors = ["Sebastian Gerske <13647606+H34D@users.noreply.github.com>"]
edition = "2018"
resolver = "2"

[dependencies]
near-sdk = {version = "4.0.0-pre.4", features = ["unstable"]}


[dev-dependencies]
near-sdk-sim = "4.0.0-pre.4"

# [profile.release]
# codegen-units = 1
# # Tell `rustc` to optimize for small code size.
# opt-level = "z"
# lto = true
# debug = false
# panic = "abort"
# # Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
# overflow-checks = true
