[package]
name = "nearapps-near-ext"
version = "0.1.0"
authors = ["Near Inc <hello@near.org>"]
edition = "2018"
resolver = "2"

[dependencies]
near-sdk = {version = "4.0.0-pre.4", features = ["unstable"]}
near-sdk-sim = {version = "4.0.0-pre.4", optional = true}
near-units = "0.1.0"
anyhow = "1.0.0"
futures = {version = "0.3.17", optional = true}
async-trait = {version = "0.1.0", optional = true}
tokio = {version = "1.14.0", optional = true}

[dependencies.serde_with]
version = "1.11.0"
default-features = false
features = [ "macros" ]

[dependencies.workspaces]
# git = "https://github.com/near/workspaces-rs"
# rev = "098b2c3" 
git = "https://github.com/nearcomponents/workspaces-rs"
rev = "a09a94b"
optional = true
# path = "../../workspaces-rs/workspaces/"

[features]
default = []
sim = ["near-sdk-sim", "futures", "async-trait", "workspaces", "tokio"]
